--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@
             <div class="w-full max-w-6xl mx-auto px-4 md:px-6 ">
                 <div class="flex justify-center">
                   <video class="h-full w-full rounded-lg" controls autoPlay>
-                    <iframe src="https://drive.google.com/file/d/1zBlp3W6QTFMJSMME-gELpL0zlBbXOK5C/preview" width="640" height="360" allow="autoplay"></iframe>
-                
+                    <video controls>
+                      <source src="https://cdn.jsdelivr.net/gh/goobnx/cyber.b1te@main/asset/cyber_security.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                  </video>                  
                 </div>
             </div>
         </main>
