--- a/index.html
+++ b/index.html
@@ -168,12 +168,7 @@
         <main class="relative flex flex-col justify-center overflow-hidden">
             <div class="w-full max-w-6xl mx-auto px-4 md:px-6 ">
                 <div class="flex justify-center">
-                  <video class="h-full w-full rounded-lg" controls autoPlay>
-                    <video controls>
-                      <source src="https://cdn.jsdelivr.net/gh/goobnx/cyber.b1te@main/asset/tes.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>                  
-                </div>
+                  <video controls src="asset/tes.mp4"></video>
             </div>
         </main>
       </div>
