--- a/index.html
+++ b/index.html
@@ -168,8 +168,11 @@
         <main class="relative flex flex-col justify-center overflow-hidden">
             <div class="w-full max-w-6xl mx-auto px-4 md:px-6 ">
                 <div class="flex justify-center">
-                  <video controls src="asset/tes.mp4"></video>
-            </div>
+                  <video controls src="asset/cyber_security.mp4"></video>
+                </div>
+                <video controls src="https://cdn.jsdelivr.net/gh/goobnx/cyber.b1te@main/asset/cyber_security.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
         </main>
       </div>
   
