fix responsive cards pelatihan

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
           </h1>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 place-items-center">
-          <div class="relative w-80 bg-gray-800 text-white rounded-2xl p-6 overflow-hidden inverted-radius">
-            <h2 class="text-xl font-bold leading-tight text-left">
+          <div class="relative max-w-xs w-full bg-gray-800 text-white rounded-2xl p-6 overflow-hidden inverted-radius">
+            <h2 class="text-lg md:text-xl font-bold leading-tight text-left">
               Serangan Siber & <br>Cara Mengatasinya  
             </h2>
             <div class="flex items-center mt-4 space-x-4 text-white justify-center md:justify-start">
@@ -266,8 +266,8 @@
               Mulai Pelatihan
             </a>
           </div>
-          <div class="relative w-80 bg-gray-800 text-white rounded-2xl p-6 overflow-hidden inverted-radius">
-            <h2 class="text-xl font-bold leading-tight text-left">
+          <div class="relative max-w-xs w-full bg-gray-800 text-white rounded-2xl p-6 overflow-hidden inverted-radius">
+            <h2 class="text-lg md:text-xl font-bold leading-tight text-left">
               Keamanan<br>Data & Privasi
             </h2>
             <div class="flex items-center mt-4 space-x-4 text-white justify-center md:justify-start">
@@ -285,8 +285,8 @@
               Mulai Pelatihan
             </a>
           </div>
-          <div class="relative w-80 bg-gray-800 text-white rounded-2xl p-6 overflow-hidden inverted-radius">
-            <h2 class="text-xl font-bold leading-tight text-left">
+          <div class="relative max-w-xs w-full bg-gray-800 text-white rounded-2xl p-6 overflow-hidden inverted-radius">
+            <h2 class="text-lg md:text-xl font-bold leading-tight text-left">
               Etika & Kepatuhan<br>keamanan siber
             </h2>
             <div class="flex items-center mt-4 space-x-4 text-white justify-center md:justify-start">
