--- a/article.html
+++ b/article.html
@@ -8,9 +8,86 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body
+    x-data="
+      {
+        scrolledFromTop: false
+      }
+    "
+    x-init="window.pageYOffset >= 50 ? scrolledFromTop = true : scrolledFromTop = false"
+    @scroll.window="window.pageYOffset >= 50 ? scrolledFromTop = true : scrolledFromTop = false">
 
-    <section class="pt-8 pb-16 lg:pt-16 lg:pb-24 px-6 md:px-16 bg-navy-blue antialiased space-y-6 md:space-y-12">
+    <header
+      x-data="
+        {
+          navbarOpen: false,
+        }
+      "
+      :class="scrolledFromTop ? 'fixed z-50 bg-navy-blue shadow-xl backdrop-blur-sm' : 'absolute' "
+      class="top-0 left-0 z-50 w-full fixed bg-navy-blue backdrop-blur-sm">
+      <div class="container mx-auto">
+        <div class="relative flex items-center justify-between mx-4">
+          <div class="max-w-full px-4 w-60">
+            <a href="javascript:void(0)" class="block w-full py-5">
+              <img src="/asset/main_logo.png" alt="logo" class="w-full dark:hidden">
+              <img src="/asset/main_logo.png" alt="logo" class="hidden w-full dark:block">
+            </a>
+          </div>
+          <div class="flex items-center justify-between w-full px-4">
+            <div>
+              <button
+                @click="navbarOpen = !navbarOpen"
+                :class="navbarOpen && 'navbarTogglerActive'"
+                id="navbarToggler"
+                class="absolute right-4 top-1/2 block -translate-y-1/2 rounded-lg px-3 py-[6px] ring-primary focus:ring-2 lg:hidden">
+                <span class="relative my-[6px] block h-[2px] w-[30px] bg-body-color dark:bg-white"></span>
+                <span class="relative my-[6px] block h-[2px] w-[30px] bg-body-color dark:bg-white"></span>
+                <span class="relative my-[6px] block h-[2px] w-[30px] bg-body-color dark:bg-white"></span>
+              </button>
+              <nav
+                x-transition:enter="transition ease-out duration-300"
+                x-transition:enter-start="opacity-0 scale-90"
+                x-transition:enter-end="opacity-100 scale-100"
+                x-transition:leave="transition ease-in duration-300"
+                x-transition:leave-start="opacity-100 scale-100"
+                x-transition:leave-end="opacity-0 scale-90"
+                :class="!navbarOpen && 'hidden'"
+                id="navbarCollapse"
+                class="absolute right-4 top-full w-full max-w-[250px] rounded-lg bg-black bg-opacity-80 backdrop-blur-sm py-5 px-6 shadow transition-all lg:static lg:block lg:w-full lg:max-w-full lg:bg-transparent lg:shadow-none">
+                <ul class="block lg:flex">
+                  <li>
+                    <a href="/index.html"
+                      class="flex py-2 text-base font-medium text-white dark:text-white hover:text-green-neon lg:ml-12 lg:inline-flex">
+                       Beranda
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/training.html"
+                      class="flex py-2 text-base font-medium text-white dark:text-white hover:text-green-neon lg:ml-12 lg:inline-flex">
+                      Pelatihan
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/article.html"
+                      class="flex py-2 text-base font-medium text-white dark:text-white hover:text-green-neon lg:ml-12 lg:inline-flex">
+                      Artikel
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="justify-end hidden pr-16 sm:flex lg:pr-0">
+              <div class="relative"> 
+                  <input type="text" id="searchText" class="py-3 text-base font-medium text-black rounded-lg px-7 border-2 border-white"
+                  placeholder="Pencarian" autocomplete="off" oninput="searchText()">                   
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="pt-36 pb-16 lg:pb-24 px-6 md:px-16 bg-navy-blue antialiased space-y-6 md:space-y-12" id="contentValue">
         <div class="bg-navy-blue p-4 rounded-lg border border-green-neon flex flex-col md:flex-row gap-4 items-center max-w-full">
             <img src="asset/article-1.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
             <div class="text-white text-center md:text-left">
@@ -23,7 +100,7 @@
                     </span>
                 </div>
                 <h2 class="text-lg md:text-xl font-bold py-2">Heboh, Hacker China Berhasil Curi Data dan Sadap Jutaan Warga Amerika!</h2>
-                <p class="text-gray-300 text-sm leading-6 text-justify">Skandal keamanan siber terbesar dalam sejarah Amerika Serikat terungkap. Hacker China yang dijuluki "Salt Typhoon" berhasil menembus jaringan telekomunikasi AS dan mencuri data serta menyadap panggilan telepon jutaan warga Amerika, termasuk tokoh-tokoh politik <a href="#" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
+                <p class="text-gray-300 text-sm leading-6 text-justify">Skandal keamanan siber terbesar dalam sejarah Amerika Serikat terungkap. Hacker China yang dijuluki "Salt Typhoon" berhasil menembus jaringan telekomunikasi AS dan mencuri data serta menyadap panggilan telepon jutaan warga Amerika, termasuk tokoh-tokoh politik <a href="/article/news/heboh-hacker-china-berhasil-curi-data-dan-sadap-jutaan-warga-amerika.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
             </div>
         </div>    
 
@@ -39,7 +116,7 @@
                     </span>
                 </div>
                 <h2 class="text-lg md:text-xl font-bold py-2">Pakar Ungkap 19 Juta Serangan Siber 'Teror' RI Sepanjang 2024</h2>
-                <p class="text-gray-300 text-sm leading-6 text-justify">Perusahaan keamanan siber Kaspersky menemukan 19.171.977 upaya serangan siber berbasis web sepanjang 2024. Angka tersebut turun 34,85 persen dibandingkan dengan tahun sebelumnya lalu dengan 29.426.930 deteksi serangan. <a href="#" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
+                <p class="text-gray-300 text-sm leading-6 text-justify">Perusahaan keamanan siber Kaspersky menemukan 19.171.977 upaya serangan siber berbasis web sepanjang 2024. Angka tersebut turun 34,85 persen dibandingkan dengan tahun sebelumnya lalu dengan 29.426.930 deteksi serangan. <a href="/article/news/pakar-ungkap-19-juta-serangan-siber-teror-ri-sepanjang-2024.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
             </div>
         </div>    
 
@@ -55,7 +132,7 @@
                     </span>
                 </div>
                 <h2 class="text-lg md:text-xl font-bold py-2">Pentingnya Sistem Backup Andal di Tengah Serangan Siber yang Makin 'Brutal'</h2>
-                <p class="text-gray-300 text-sm leading-6 text-justify">Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. <a href="#" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
+                <p class="text-gray-300 text-sm leading-6 text-justify">Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. <a href="/article/news/pentingnya-sistem-backup-andal-di-tengah-serangan-siber-yang-makin-brutal.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
             </div>
         </div>
 
@@ -135,28 +212,11 @@
             </div>
           </div>
         </footer>
-      </section>
+    </section>
 
-      <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            if (window.location.hash) {
-                const targetId = window.location.hash.substring(1);
-                const targetElement = document.getElementById(targetId);
-                
-                if (targetElement) {
-                setTimeout(function() {
-                    const headerOffset = 110;
-                    const elementPosition = targetElement.getBoundingClientRect().top;
-                    const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
-                    
-                    window.scrollTo({
-                    top: offsetPosition,
-                    behavior: 'smooth'
-                    });
-                }, 100);
-                }
-            }
-        });
-      </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script src="/src/js/searchText.js"></script>
+    <script src="/src/js/activeNavbar.js"></script>
+
 </body>
 </html>
