--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container mx-auto">
         <div class="relative flex items-center justify-between mx-4">
           <div class="max-w-full px-4 w-60">
-            <a href="javascript:void(0)" class="block w-full py-5">
+            <a href="/index.html" class="block w-full py-5">
               <img src="/asset/main_logo.png" alt="logo" class="w-full dark:hidden">
               <img src="/asset/main_logo.png" alt="logo" class="hidden w-full dark:block">
             </a>
@@ -536,7 +536,7 @@
                 class="inline-block py-3 text-base text-white font-medium transition rounded-full bg-green-neon px-6 sm:px-7 w-full sm:w-auto text-center">
                 <i class="fa-brands fa-discord text-lg align-middle"></i> <span class="align-middle">Gabung Komunitas</span>
               </a>
-              <a href="javascript:void(0)"
+              <a href="/training.html"
                 class="py-3 text-base font-medium text-white transition rounded-full border border-green-neon bg-secondary px-6 sm:px-7 hover:bg-opacity-90 w-full sm:w-auto text-center">
                 Mulai Pelatihan
               </a>
