--- a/training.html
+++ b/training.html
@@ -28,7 +28,7 @@
       <div class="container mx-auto">
         <div class="relative flex items-center justify-between mx-4">
           <div class="max-w-full px-4 w-60">
-            <a href="javascript:void(0)" class="block w-full py-5">
+            <a href="/index.html" class="block w-full py-5">
               <img src="/asset/main_logo.png" alt="logo" class="w-full dark:hidden">
               <img src="/asset/main_logo.png" alt="logo" class="hidden w-full dark:block">
             </a>
@@ -93,7 +93,7 @@
         <div class="relative text-black">
             <div class="p-6 flex flex-col md:flex-row gap-6 bg-sea-blue">
                 <div class="relative w-full md:w-1/3 flex justify-center">
-                    <img src="asset/training-1.png" alt="Keamanan Data" class="max-w-[250px] w-full md:w-auto md:absolute md:top-[-70px] md:left-1/2 md:-translate-x-1/2 z-10">
+                    <img src="/asset/training-1.png" alt="Keamanan Data" class="max-w-[250px] w-full md:w-auto md:absolute md:top-[-70px] md:left-1/2 md:-translate-x-1/2 z-10">
                 </div>
                 <div class="w-full md:w-2/3">
                     <h2 class="text-2xl font-bold">Serangan Siber & Cara Mengatasinya</h2>
@@ -107,11 +107,11 @@
                     </div>
                 </div>
             </div>
-            <div class="py-6 px-6 text-center md:ml-80">
-                <button class="px-6 py-2 border border-sea-blue text-sea-blue rounded-full hover:bg-sea-blue hover:text-black shadow-sea-blue-opacity-2 transition w-full md:w-[500px]">
-                    Mulai Pelatihan
-                </button>
-            </div>
+            <div class="py-6 px-6 flex justify-center items-center text-center">
+              <a href="/training/material-1.html" class="block px-6 py-2 border border-sea-blue text-sea-blue rounded-full hover:bg-sea-blue hover:text-black shadow-sea-blue-opacity-2 transition w-full md:w-[500px]">
+                Mulai Pelatihan
+              </a>
+            </div>            
         </div>
 
         <!-- Card 2 -->
@@ -129,13 +129,13 @@
                     </div>
                 </div>
                 <div class="relative w-full md:w-1/3 flex justify-center">
-                    <img src="asset/training-2.png" alt="Keamanan Data" class="max-w-[350px] w-full md:w-auto md:absolute md:top-[-70px] md:left-1/2 md:-translate-x-1/2 z-10">
+                    <img src="/asset/training-2.png" alt="Keamanan Data" class="max-w-[350px] w-full md:w-auto md:absolute md:top-[-70px] md:left-1/2 md:-translate-x-1/2 z-10">
                 </div>
             </div>
-            <div class="py-6 px-6 text-center md:mr-80">
-                <button class="px-6 py-2 border border-sun-yellow text-sun-yellow rounded-full hover:bg-sun-yellow hover:text-black shadow-sun-yellow-opacity-2 transition w-full md:w-[500px]">
-                    Mulai Pelatihan
-                </button>
+            <div class="py-6 px-6 flex justify-center items-center text-center">
+              <a href="/training/material-2.html" class="block px-6 py-2 border border-sun-yellow text-sun-yellow rounded-full hover:bg-sun-yellow hover:text-black shadow-sun-yellow-opacity-2 transition w-full md:w-[500px]">
+                Mulai Pelatihan
+              </a>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
         <div class="relative text-black">
             <div class="p-6 flex flex-col md:flex-row gap-6 bg-green-neon">
                 <div class="relative w-full md:w-1/3 flex justify-center">
-                    <img src="asset/training-3.png" alt="Keamanan Data" class="max-w-[350px] w-full md:w-auto md:absolute md:top-[-70px] md:left-1/2 md:-translate-x-1/2 z-10">
+                    <img src="/asset/training-3.png" alt="Keamanan Data" class="max-w-[350px] w-full md:w-auto md:absolute md:top-[-70px] md:left-1/2 md:-translate-x-1/2 z-10">
                 </div>
                 <div class="w-full md:w-2/3">
                     <h2 class="text-2xl font-bold">Etika & Kepatuhan Keamanan Siber</h2>
@@ -157,10 +157,10 @@
                     </div>
                 </div>
             </div>
-            <div class="py-6 px-6 text-center md:ml-80">
-                <button class="px-6 py-2 border border-green-neon text-green-neon rounded-full hover:bg-green-neon hover:text-black shadow-green-neon-opacity-2 transition w-full md:w-[500px]">
-                    Mulai Pelatihan
-                </button>
+            <div class="py-6 px-6 flex justify-center items-center text-center">
+                <a href="/training/material-3.html" class="block px-6 py-2 border border-green-neon text-green-neon rounded-full hover:bg-green-neon hover:text-black shadow-green-neon-opacity-2 transition w-full md:w-[500px]">
+                  Mulai Pelatihan
+                </a>
             </div>
         </div>
 
