--- a/article.html
+++ b/article.html
@@ -214,6 +214,18 @@
         </footer>
     </section>
 
+    <div class="gtranslate_wrapper"></div>
+    
+    <script>window.gtranslateSettings = {
+      "default_language":"id",
+      "languages":["id","zh-CN","en"],
+      "wrapper_selector":".gtranslate_wrapper",
+      "switcher_horizontal_position":"left",
+      "float_switcher_open_direction":"bottom"
+      }
+    </script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="/src/js/searchText.js"></script>
     <script src="/src/js/activeNavbar.js"></script>
