--- a/index.html
+++ b/index.html
@@ -607,7 +607,14 @@
 
     <div class="gtranslate_wrapper"></div>
     
-    <script>window.gtranslateSettings = {"default_language":"id","languages":["id","zh-CN","en"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"right","float_switcher_open_direction":"bottom"}</script>
+    <script>window.gtranslateSettings = {
+      "default_language":"id",
+      "languages":["id","zh-CN","en"],
+      "wrapper_selector":".gtranslate_wrapper",
+      "switcher_horizontal_position":"left",
+      "float_switcher_open_direction":"bottom"
+      }
+    </script>
     <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
