--- a/training/material-3/skor.html
+++ b/training/material-3/skor.html
@@ -29,5 +29,17 @@
 
     <script src="/src/js/material-1/skor-materi-1.js"></script>
 
+    <div class="gtranslate_wrapper"></div>
+    
+    <script>window.gtranslateSettings = {
+      "default_language":"id",
+      "languages":["id","zh-CN","en"],
+      "wrapper_selector":".gtranslate_wrapper",
+      "switcher_horizontal_position":"left",
+      "float_switcher_open_direction":"bottom"
+      }
+    </script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+
   </body>
 </html>
