--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             </div>
       
             <div class="flex flex-wrap gap-4 mt-4 justify-center md:justify-start">
-              <a href="javascript:void(0)"
+              <a href="https://discord.gg/GM3EuBbn" target="_blank"
                 class="inline-block py-3 text-base text-white font-medium transition rounded-full bg-green-neon px-6 sm:px-7 w-full sm:w-auto text-center">
                 <i class="fa-brands fa-discord text-lg align-middle"></i> <span class="align-middle">Gabung Komunitas</span>
               </a>
@@ -571,9 +571,9 @@
               <p class="text-sm leading-6 font-base">
                 Dapatkan wawasan, serta dukungan, lalu terhubung dengan para ahli dan pengguna lain yang peduli dengan keamanan digital.
               <div class="flex items-center gap-4 mt-6">
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
+                  <a href="" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
+                  <a href="" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
+                  <a href="https://discord.gg/GM3EuBbn" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
               </div>
               <p class="text-xs text-gray-400 mt-6">© 2025 cyber.b1te. All Right Reserved</p>
             </div>
@@ -606,16 +606,8 @@
     </div>
 
     <div class="gtranslate_wrapper"></div>
-    
-    <script>window.gtranslateSettings = {
-      "default_language":"id",
-      "languages":["id","zh-CN","en"],
-      "wrapper_selector":".gtranslate_wrapper",
-      "switcher_horizontal_position":"left",
-      "float_switcher_open_direction":"bottom"
-      }
-    </script>
-    <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+<script>window.gtranslateSettings = {"default_language":"id","languages":["id","en"],"globe_color":"#66aaff","wrapper_selector":".gtranslate_wrapper","flag_size":24,"horizontal_position":"left","vertical_position":"bottom","globe_size":40}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/globe.js" defer></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
