--- a/training/material-1/skor.html
+++ b/training/material-1/skor.html
@@ -88,7 +88,7 @@
       </div>
     </header>
     
-    <section class="pt-8 pb-16 lg:pt-16 lg:pb-24 space-y-6 md:space-y-24 bg-navy-blue">
+    <section class="pt-36 space-y-6 md:space-y-24 bg-navy-blue">
 
         <div class="countdown relative bg-white/75 backdrop-blur-sm p-16 rounded-lg shadow-lg text-center w-3/4 mx-auto flex flex-col items-center">
             <div class="text-center">
