--- a/training/material-3/quiz.html
+++ b/training/material-3/quiz.html
@@ -87,7 +87,7 @@
       </div>
     </header>
 
-    <section class="pt-8 pb-16 lg:pt-16 lg:pb-24 space-y-6 md:space-y-24 bg-navy-blue">
+    <section class="pt-36 space-y-6 md:space-y-24 bg-navy-blue">
         
         <div class="relative text-white">
             <div class="p-6 flex flex-col md:flex-row gap-6 bg-sea-blue mx-auto">
