--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
               <p class="text-sm leading-6 font-base">
                 Dapatkan wawasan, serta dukungan, lalu terhubung dengan para ahli dan pengguna lain yang peduli dengan keamanan digital.
               <div class="flex items-center gap-4 mt-6">
-                  <a href="" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
+                  <a href="https://instagram.com/cyber.b1te" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
                   <a href="https://whatsapp.com/channel/0029Vb9GwWA5K3zLJqKGjr0h" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
                   <a href="https://discord.gg/GM3EuBbn" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
               </div>
@@ -612,15 +612,7 @@
     
     <!-- GTranslate -->
     <div class="gtranslate_wrapper text-white"></div>
-    <script>window.gtranslateSettings = {
-        "default_language":"id",
-        "languages":["id","en"],
-        "wrapper_selector":".gtranslate_wrapper",
-        "flag_size":24,
-        "horizontal_position":"left",
-        "vertical_position":"bottom"
-      }
-    </script>
+    <script src="/src/js/scriptGTranslate.js"></script>
     <script src="https://cdn.gtranslate.net/widgets/latest/fc.js" defer></script>
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
