--- a/training/material-3/skor.html
+++ b/training/material-3/skor.html
@@ -107,17 +107,9 @@
 
     <script src="/src/js/material-1/skor-materi-1.js"></script>
 
-    <!-- GTranslate -->
+     <!-- GTranslate -->
     <div class="gtranslate_wrapper text-white"></div>
-    <script>window.gtranslateSettings = {
-        "default_language":"id",
-        "languages":["id","en"],
-        "wrapper_selector":".gtranslate_wrapper",
-        "flag_size":24,
-        "horizontal_position":"left",
-        "vertical_position":"bottom"
-      }
-    </script>
+    <script src="/src/js/scriptGTranslate.js"></script>
     <script src="https://cdn.gtranslate.net/widgets/latest/fc.js" defer></script>
 
   </body>
