--- a/article.html
+++ b/article.html
@@ -87,81 +87,84 @@
       </div>
     </header>
 
-    <section class="pt-36 pb-16 lg:pb-24 px-6 md:px-16 bg-navy-blue antialiased space-y-6 md:space-y-12" id="contentValue">
+    <section class="pt-36 bg-navy-blue antialiased " id="contentValue">
+
+      <div class="px-6 md:px-16 space-y-6 md:space-y-12">
         <div class="bg-navy-blue p-4 rounded-lg border border-green-neon flex flex-col md:flex-row gap-4 items-center max-w-full">
-            <img src="asset/article-1.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
-            <div class="text-white text-center md:text-left">
-                <div class="flex items-center justify-center md:justify-start text-sm text-gray-400 space-x-3">
-                    <span class="flex items-center">
-                        <i class="fa-solid fa-users text-green-neon"></i>&nbsp;2.5k
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-clock text-green-neon"></i>&nbsp;28 Desember 2024
-                    </span>
-                </div>
-                <h2 class="text-lg md:text-xl font-bold py-2">Heboh, Hacker China Berhasil Curi Data dan Sadap Jutaan Warga Amerika!</h2>
-                <p class="text-gray-300 text-sm leading-6 text-justify">Skandal keamanan siber terbesar dalam sejarah Amerika Serikat terungkap. Hacker China yang dijuluki "Salt Typhoon" berhasil menembus jaringan telekomunikasi AS dan mencuri data serta menyadap panggilan telepon jutaan warga Amerika, termasuk tokoh-tokoh politik <a href="/article/news/heboh-hacker-china-berhasil-curi-data-dan-sadap-jutaan-warga-amerika.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
-            </div>
+          <img src="asset/article-1.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
+          <div class="text-white text-center md:text-left">
+              <div class="flex items-center justify-center md:justify-start text-sm text-gray-400 space-x-3">
+                  <span class="flex items-center">
+                      <i class="fa-solid fa-users text-green-neon"></i>&nbsp;2.5k
+                  </span>
+                  <span>
+                      <i class="fa-solid fa-clock text-green-neon"></i>&nbsp;28 Desember 2024
+                  </span>
+              </div>
+              <h2 class="text-lg md:text-xl font-bold py-2">Heboh, Hacker China Berhasil Curi Data dan Sadap Jutaan Warga Amerika!</h2>
+              <p class="text-gray-300 text-sm leading-6 text-justify">Skandal keamanan siber terbesar dalam sejarah Amerika Serikat terungkap. Hacker China yang dijuluki "Salt Typhoon" berhasil menembus jaringan telekomunikasi AS dan mencuri data serta menyadap panggilan telepon jutaan warga Amerika, termasuk tokoh-tokoh politik <a href="/article/news/heboh-hacker-china-berhasil-curi-data-dan-sadap-jutaan-warga-amerika.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
+          </div>
         </div>    
 
         <div class="bg-navy-blue p-4 rounded-lg border border-green-neon flex flex-col md:flex-row-reverse gap-4 items-center max-w-full">
-            <img src="asset/article-2.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
-            <div class="text-white text-center md:text-left">
-                <div class="flex items-center justify-center md:justify-start text-sm text-gray-400 space-x-3">
-                    <span class="flex items-center">
-                        <i class="fa-solid fa-users text-green-neon"></i>&nbsp;2.1k
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-clock text-green-neon"></i>&nbsp;7 Februari 2025
-                    </span>
-                </div>
-                <h2 class="text-lg md:text-xl font-bold py-2">Pakar Ungkap 19 Juta Serangan Siber 'Teror' RI Sepanjang 2024</h2>
-                <p class="text-gray-300 text-sm leading-6 text-justify">Perusahaan keamanan siber Kaspersky menemukan 19.171.977 upaya serangan siber berbasis web sepanjang 2024. Angka tersebut turun 34,85 persen dibandingkan dengan tahun sebelumnya lalu dengan 29.426.930 deteksi serangan. <a href="/article/news/pakar-ungkap-19-juta-serangan-siber-teror-ri-sepanjang-2024.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
-            </div>
+          <img src="asset/article-2.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
+          <div class="text-white text-center md:text-left">
+              <div class="flex items-center justify-center md:justify-start text-sm text-gray-400 space-x-3">
+                  <span class="flex items-center">
+                      <i class="fa-solid fa-users text-green-neon"></i>&nbsp;2.1k
+                  </span>
+                  <span>
+                      <i class="fa-solid fa-clock text-green-neon"></i>&nbsp;7 Februari 2025
+                  </span>
+              </div>
+              <h2 class="text-lg md:text-xl font-bold py-2">Pakar Ungkap 19 Juta Serangan Siber 'Teror' RI Sepanjang 2024</h2>
+              <p class="text-gray-300 text-sm leading-6 text-justify">Perusahaan keamanan siber Kaspersky menemukan 19.171.977 upaya serangan siber berbasis web sepanjang 2024. Angka tersebut turun 34,85 persen dibandingkan dengan tahun sebelumnya lalu dengan 29.426.930 deteksi serangan. <a href="/article/news/pakar-ungkap-19-juta-serangan-siber-teror-ri-sepanjang-2024.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
+          </div>
         </div>    
 
         <div class="bg-navy-blue p-4 rounded-lg border border-green-neon flex flex-col md:flex-row gap-4 items-center max-w-full">
-            <img src="asset/article-3.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
-            <div class="text-white text-center md:text-left">
-                <div class="flex items-center justify-center md:justify-start text-sm text-gray-400 space-x-3">
-                    <span class="flex items-center">
-                        <i class="fa-solid fa-users text-green-neon"></i>&nbsp;1.9k
-                    </span>
-                    <span>
-                        <i class="fa-solid fa-clock text-green-neon"></i>&nbsp;23 Februari 2025
-                    </span>
-                </div>
-                <h2 class="text-lg md:text-xl font-bold py-2">Pentingnya Sistem Backup Andal di Tengah Serangan Siber yang Makin 'Brutal'</h2>
-                <p class="text-gray-300 text-sm leading-6 text-justify">Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. <a href="/article/news/pentingnya-sistem-backup-andal-di-tengah-serangan-siber-yang-makin-brutal.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
-            </div>
+          <img src="asset/article-3.png" alt="Hacker Image" class="w-full md:w-60 h-40 object-cover rounded-md">
+          <div class="text-white text-center md:text-left">
+              <div class="flex items-center justify-center md:justify-start text-sm text-gray-400 space-x-3">
+                  <span class="flex items-center">
+                      <i class="fa-solid fa-users text-green-neon"></i>&nbsp;1.9k
+                  </span>
+                  <span>
+                      <i class="fa-solid fa-clock text-green-neon"></i>&nbsp;23 Februari 2025
+                  </span>
+              </div>
+              <h2 class="text-lg md:text-xl font-bold py-2">Pentingnya Sistem Backup Andal di Tengah Serangan Siber yang Makin 'Brutal'</h2>
+              <p class="text-gray-300 text-sm leading-6 text-justify">Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. Serangan siber, khususnya ransomware, menunjukkan tren peningkatan yang mengkhawatirkan di Indonesia. <a href="/article/news/pentingnya-sistem-backup-andal-di-tengah-serangan-siber-yang-makin-brutal.html" class="text-green-400 hover:underline">Baca Selengkapnya...</a></p>
+          </div>
         </div>
 
         <nav class="flex justify-center items-center gap-x-1" aria-label="Pagination">
-            <button type="button" class="min-h-9.5 min-w-9.5 py-2 px-2.5 inline-flex justify-center items-center gap-x-2 text-sm rounded-lg text-white hover:text-black hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" aria-label="Previous">
-            <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="m15 18-6-6 6-6"></path>
-            </svg>
-            <span class="sr-only">Previous</span>
-            </button>
-            <div class="flex items-center gap-x-1">
-            <span class="min-h-9.5 min-w-9.5 flex justify-center items-center bg-green-neon hover:bg-transparent border border-green-neon text-white py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none">1</span>
-            <span class="min-h-9.5 flex justify-center items-center text-gray-500 py-2 px-1.5 text-sm dark:text-neutral-500">of</span>
-            <span class="min-h-9.5 flex justify-center items-center text-gray-500 py-2 px-1.5 text-sm dark:text-neutral-500">3</span>
-            </div>
-            <button type="button" class="min-h-9.5 min-w-9.5 py-2 px-2.5 inline-flex justify-center items-center gap-x-2 text-sm rounded-lg text-white hover:text-black hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" aria-label="Next">
-            <span class="sr-only">Next</span>
-            <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="m9 18 6-6-6-6"></path>
-            </svg>
-            </button>
+          <button type="button" class="min-h-9.5 min-w-9.5 py-2 px-2.5 inline-flex justify-center items-center gap-x-2 text-sm rounded-lg text-white hover:text-black hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" aria-label="Previous">
+          <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="m15 18-6-6 6-6"></path>
+          </svg>
+          <span class="sr-only">Previous</span>
+          </button>
+          <div class="flex items-center gap-x-1">
+          <span class="min-h-9.5 min-w-9.5 flex justify-center items-center bg-green-neon hover:bg-transparent border border-green-neon text-white py-2 px-3 text-sm rounded-lg focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none">1</span>
+          <span class="min-h-9.5 flex justify-center items-center text-gray-500 py-2 px-1.5 text-sm dark:text-neutral-500">of</span>
+          <span class="min-h-9.5 flex justify-center items-center text-gray-500 py-2 px-1.5 text-sm dark:text-neutral-500">3</span>
+          </div>
+          <button type="button" class="min-h-9.5 min-w-9.5 py-2 px-2.5 inline-flex justify-center items-center gap-x-2 text-sm rounded-lg text-white hover:text-black hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" aria-label="Next">
+          <span class="sr-only">Next</span>
+          <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="m9 18 6-6-6-6"></path>
+          </svg>
+          </button>
         </nav>
-    </section>
+      </div>
 
-    <section class="text-white bg-navy-blue pt-12 md:py-0">
-  
+      <!-- FOOTER -->
+      <section class="text-white pt-16">
+    
         <footer class="bg-navy-blue-opacity py-12 px-6 md:px-16 rounded-t-[70px] border-t-8 border-r-5 border-l-5 border-sea-blue-opacity shadow-sea-blue-opacity">
           <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
-  
+
             <!-- Bagian Kiri -->
             <div>
                 <h2 class="text-3xl font-bold">{ Cyber.b1te }</h2>
@@ -182,9 +185,9 @@
               <p class="text-sm leading-6 font-base">
                 Dapatkan wawasan, serta dukungan, lalu terhubung dengan para ahli dan pengguna lain yang peduli dengan keamanan digital.
               <div class="flex items-center gap-4 mt-6">
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
+                  <a href="https://instagram.com/cyber.b1te" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
+                  <a href="https://whatsapp.com/channel/0029Vb9GwWA5K3zLJqKGjr0h" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
+                  <a href="https://discord.gg/GM3EuBbn" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
               </div>
               <p class="text-xs text-gray-400 mt-6">© 2025 cyber.b1te. All Right Reserved</p>
             </div>
@@ -193,12 +196,12 @@
             <div class="grid grid-cols-2 gap">
                 <div>
                     <h3 class="font-semibold">Pintas</h3>
-                    <ul class="mt-2 space-y-2 text-sm text-gray-400">
-                        <li><a href="index.html#section_video" class="hover:text-white">Video Demonstrasi</a></li>
-                        <li><a href="index.html#section_about" class="hover:text-white">Tentang Kami</a></li>
-                        <li><a href="index.html#section_testimonials" class="hover:text-white">Testimoni</a></li>
-                        <li><a href="index.html#section_howto" class="hover:text-white">Cara Penggunaan</a></li>
-                        <li><a href="index.html#section_community" class="hover:text-white">Komunitas</a></li>
+                    <ul class="mt-2 space-y-2 text-sm text-gray-400 pintas">
+                        <li><a href="/index.html#section_video" class="hover:text-white">Video Demonstrasi</a></li>
+                        <li><a href="/index.html#section_about" class="hover:text-white">Tentang Kami</a></li>
+                        <li><a href="/index.html#section_testimonials" class="hover:text-white">Testimoni</a></li>
+                        <li><a href="/index.html#section_howto" class="hover:text-white">Cara Penggunaan</a></li>
+                        <li><a href="/index.html#section_community" class="hover:text-white">Komunitas</a></li>
                     </ul>
                 </div>
                 <div>
@@ -212,12 +215,15 @@
             </div>
           </div>
         </footer>
-    </section>
+      </section>
 
-     <!-- GTranslate -->
-     <div class="gtranslate_wrapper text-white"></div>
-     <script src="/src/js/scriptGTranslate.js"></script>
-     <script src="https://cdn.gtranslate.net/widgets/latest/fc.js" defer></script>
+    </section>
+    
+
+    <!-- GTranslate -->
+    <div class="gtranslate_wrapper text-white"></div>
+    <script src="/src/js/scriptGTranslate.js"></script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/fc.js" defer></script>
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="/src/js/searchText.js"></script>
