--- a/training/material-1.html
+++ b/training/material-1.html
@@ -124,12 +124,12 @@
             </a>
         </div>
         
-          <!-- FOOTER -->
-      <section class="text-white pt-12 md:py-0">
-  
+      <!-- FOOTER -->
+      <section class="text-white pt-16">
+    
         <footer class="bg-navy-blue-opacity py-12 px-6 md:px-16 rounded-t-[70px] border-t-8 border-r-5 border-l-5 border-sea-blue-opacity shadow-sea-blue-opacity">
           <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
-  
+
             <!-- Bagian Kiri -->
             <div>
                 <h2 class="text-3xl font-bold">{ Cyber.b1te }</h2>
@@ -150,9 +150,9 @@
               <p class="text-sm leading-6 font-base">
                 Dapatkan wawasan, serta dukungan, lalu terhubung dengan para ahli dan pengguna lain yang peduli dengan keamanan digital.
               <div class="flex items-center gap-4 mt-6">
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
-                  <a href="" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
+                  <a href="https://instagram.com/cyber.b1te" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-instagram"></i></a>
+                  <a href="https://whatsapp.com/channel/0029Vb9GwWA5K3zLJqKGjr0h" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-whatsapp"></i></a>
+                  <a href="https://discord.gg/GM3EuBbn" target="_blank" class="text-blue-400 text-xl"><i class="fab fa-discord"></i></a>
               </div>
               <p class="text-xs text-gray-400 mt-6">© 2025 cyber.b1te. All Right Reserved</p>
             </div>
@@ -162,12 +162,12 @@
                 <div>
                     <h3 class="font-semibold">Pintas</h3>
                     <ul class="mt-2 space-y-2 text-sm text-gray-400 pintas">
-                        <li><a href="index.html#section_video" class="hover:text-white">Video Demonstrasi</a></li>
-                        <li><a href="index.html#section_about" class="hover:text-white">Tentang Kami</a></li>
-                        <li><a href="index.html#section_testimonials" class="hover:text-white">Testimoni</a></li>
-                        <li><a href="index.html#section_howto" class="hover:text-white">Cara Penggunaan</a></li>
-                        <li><a href="index.html#section_community" class="hover:text-white">Komunitas</a></li>
-                    </ul>
+                      <li><a href="/index.html#section_video" class="hover:text-white">Video Demonstrasi</a></li>
+                      <li><a href="/index.html#section_about" class="hover:text-white">Tentang Kami</a></li>
+                      <li><a href="/index.html#section_testimonials" class="hover:text-white">Testimoni</a></li>
+                      <li><a href="/index.html#section_howto" class="hover:text-white">Cara Penggunaan</a></li>
+                      <li><a href="/index.html#section_community" class="hover:text-white">Komunitas</a></li>
+                  </ul>
                 </div>
                 <div>
                     <h3 class="font-semibold">Pelatihan</h3>
