--- a/training/material-2.html
+++ b/training/material-2.html
@@ -117,7 +117,7 @@
       </div>
 
       <div class="flex flex-col justify-center items-center">
-          <iframe src="https://cdn.jsdelivr.net/gh/goobnx/cyber.b1te@main/asset/material-2.pdf" class="w-full max-w-[90%] md:max-w-[800px] h-[500px] shadow-lg"></iframe>
+          <iframe src="/asset/material-2.pdf" class="w-full max-w-[90%] md:max-w-[800px] h-[500px] shadow-lg"></iframe>
       
           <a href="/training/material-1/quiz.html" class="px-6 py-2 border border-white bg-sun-yellow text-white rounded-full mt-6 transition w-full sm:w-[300px] md:w-1/2 text-center">
               Mulai Kuis
