--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="w-full max-w-6xl mx-auto px-4 md:px-6 ">
               <div class="flex justify-center">
                 <video id="videoAboutUs" controls class="w-full max-w-[800px] rounded-lg"
-                  src="https://cdn.jsdelivr.net/gh/goobnx/cyber.b1te@main/asset/cyber-security.mp4" type="video/mp4">
+                  src="/asset/cyber-security.mp4" type="video/mp4">
                 </video>
               </div>
             </div>
