--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                 <img src="https://randomuser.me/api/portraits/men/45.jpg" class="w-10 h-10 rounded-full object-cover">
                                 <div class="ml-3">
                                     <h4 class="font-bold">Rama</h4>
-                                    <p class="text-gray-500 text-sm">Backstack Dev</p>
+                                    <p class="text-gray-500 text-sm">Backend Dev</p>
                                 </div>
                             </div>
                         </div>
@@ -545,7 +545,7 @@
                   <h3 class="font-base">Dapatkan kabar terbaru</h3>
                   <div class="mt-4 flex items-center border border-sea-blue rounded-md overflow-hidden max-w-[280px] w-full">
                     <input type="email" placeholder="Masukkan email" required
-                        class="flex-1 px-4 py-2 bg-transparent outline-none text-white placeholder-gray-400">
+                      class="flex-1 min-w-0 px-4 py-2 bg-transparent outline-none text-white placeholder-gray-400">
                     <button type="submit" class="border-l border-sea-blue p-2 flex items-center justify-center w-10 h-10">
                         <i class="fas fa-envelope text-sea-blue text-base sm:text-lg"></i>
                     </button>
