--- a/training/material-2.html
+++ b/training/material-2.html
@@ -121,7 +121,7 @@
       <div class="flex flex-col justify-center items-center">
           <iframe src="/asset/material-2.pdf" class="w-full max-w-[90%] md:max-w-[800px] h-[500px] shadow-lg"></iframe>
       
-          <a href="/training/material-1/quiz.html" class="px-6 py-2 border border-white bg-sun-yellow text-white rounded-full mt-6 transition w-full sm:w-[300px] md:w-1/2 text-center">
+          <a href="/training/material-2/quiz.html" class="px-6 py-2 border border-white bg-sun-yellow text-white rounded-full mt-6 transition w-full sm:w-[300px] md:w-1/2 text-center">
               Mulai Kuis
           </a>
       </div>
@@ -139,7 +139,7 @@
                   <h3 class="font-base">Dapatkan kabar terbaru</h3>
                   <div class="mt-4 flex items-center border border-sea-blue rounded-md overflow-hidden max-w-[280px] w-full">
                     <input type="email" placeholder="Masukkan email" required
-                        class="flex-1 px-4 py-2 bg-transparent outline-none text-white placeholder-gray-400">
+                      class="flex-1 min-w-0 px-4 py-2 bg-transparent outline-none text-white placeholder-gray-400">
                     <button type="submit" class="border-l border-sea-blue p-2 flex items-center justify-center w-10 h-10">
                         <i class="fas fa-envelope text-sea-blue text-base sm:text-lg"></i>
                     </button>
