--- a/training/material-3/skor.html
+++ b/training/material-3/skor.html
@@ -167,7 +167,7 @@
                   <h3 class="font-base">Dapatkan kabar terbaru</h3>
                   <div class="mt-4 flex items-center border border-sea-blue rounded-md overflow-hidden max-w-[280px] w-full">
                     <input type="email" placeholder="Masukkan email" required
-                        class="flex-1 px-4 py-2 bg-transparent outline-none text-white placeholder-gray-400">
+                    class="flex-1 min-w-0 px-4 py-2 bg-transparent outline-none text-white placeholder-gray-400">
                     <button type="submit" class="border-l border-sea-blue p-2 flex items-center justify-center w-10 h-10">
                         <i class="fas fa-envelope text-sea-blue text-base sm:text-lg"></i>
                     </button>
