--- a/training/material-3/quiz.html
+++ b/training/material-3/quiz.html
@@ -91,7 +91,7 @@
     <section class="pt-36 space-y-6 md:space-y-24 bg-navy-blue">
         
       <div class="relative text-white">
-          <div class="p-6 flex flex-col md:flex-row gap-6 bg-sea-blue mx-auto">
+          <div class="p-6 flex flex-col md:flex-row gap-6 bg-green-neon mx-auto">
               <div class="w-full text-center">
                   <h2 class="text-2xl font-bold">Kuis Etika & Kepatuhan Keamanan Siber</h2>
               </div>
